# stanford-edgar-filings-dataset

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  MANIFEST.in  README.md  html-to-pdf.mjs  multimarkdown.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/skills/stanford-edgar-parser/: SKILL.md
.github/workflows/: publish.yml  table-regressions.yml
examples/0000882095-24-000007/: parsed.md
examples/0000909832-24-000079/: parsed.md
examples/0000950170-24-087843/: parsed.md
examples/0001020710-24-000097/: parsed.md
examples/0001045810-26-000019/: parsed.md  raw.txt
examples/0001140361-24-005109/: parsed.md  raw.txt
examples/0001140361-24-048248/: parsed.md  raw.txt
examples/0001324424-20-000029/: parsed.md  raw.txt
examples/0001533232-26-000012/: parsed.md
examples/0001769628-26-000154/: parsed.md  raw.txt
stanford_edgar_parser/: README.md  __init__.py  __main__.py  _fragments.py  _state.py  ai.py  api.py  config.py  hardcodes.py  mcp_server.py  orchestrator.py  runtime.py  sec_parser.py  special_chars.py
stanford_edgar_parser/multimarkdown/: __init__.py  multimarkdown.py
stanford_edgar_parser/parsers/html/: __init__.py  html.py  postprocessing.py  preprocessing.py  table_cleaning.py
stanford_edgar_parser/parsers/ocr/: __init__.py  ocr.py  ocr_utils.py  rotate_auth.py
stanford_edgar_parser/parsers/plaintext/: __init__.py  legacy_form_parsers.py  plaintext_parser.py
stanford_edgar_parser/parsers/sgml/: __init__.py  sgml_utils.py
stanford_edgar_parser/utils/: __init__.py  bootstrap.py  parse_stats.py  tokenizer.py
tools/: check_showcase_tables.py  review_snippet.py  table_regression_snapshots.py
(+157 files in other folders)
